--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,10 +19,10 @@ jobs:
       matrix:
         version:
           - '1.0'
-          - '1.8'
           - 'nightly'
         os:
           - ubuntu-latest
+          - windows-latest
         arch:
           - x64
     steps:
