--- a/Project.toml
+++ b/Project.toml
@@ -19,13 +19,13 @@ ThreadsX = "ac1d9e8a-700a-412c-b207-f0111f4b6c0d"
 
 [compat]
 julia = "1"
-FastGaussQuadrature = ">=0.5"
-Meshes = ">=0.28"
-OffsetArrays = ">=1.10"
-ProgressMeter = ">=1.7"
-Rotations = ">=1.4"
-StaticArrays = ">=1.5"
-ThreadsX = ">=0.1"
+FastGaussQuadrature = "0.5"
+Meshes = "0.28 - 0.30"
+OffsetArrays = "1"
+ProgressMeter = "1"
+Rotations = "1"
+StaticArrays = "1"
+ThreadsX = "0.1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
