--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ Meshes = "eacbb407-ea5a-433e-ab97-5258b1ca43fa"
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
+Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Rotations = "6038ab10-8711-5258-84ad-4b1120ba62dc"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
@@ -18,14 +19,15 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 ThreadsX = "ac1d9e8a-700a-412c-b207-f0111f4b6c0d"
 
 [compat]
-julia = "1"
 FastGaussQuadrature = "0.5 - 0.6"
 Meshes = "0.28 - 0.30"
 OffsetArrays = "1.10 - 1.12"
 ProgressMeter = "1.7 - 1.8"
+Reexport = "1.2 - 1.3"
 Rotations = "1.4 - 1.5"
 StaticArrays = "1.5 - 1.6"
 ThreadsX = "0.1 - 0.2"
+julia = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
